--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -183,6 +183,23 @@
                             </div>
                         </div>
                     </a>
+                    {% for trend in trending_today %}
+                    <a href="{{ trend.book.get_absolute_url }}">
+                        <div class="trending-item">
+                            <div class="item-image">
+                                <img src="{{ trend.book.cover_image }}" alt="Sách" class="image">
+                            </div>
+                            <div class="item-information">
+                                <h1 class="book-name">{{ trend.book.title }}</h1>
+                                <h3 class="author">{{ trend.book.author.name }}</h3>
+                                <div class="time-item">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span class="time">Lượt xem: {{ trend.views }}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
