--- a/sachnoi/templates/app/search_results.html
+++ b/sachnoi/templates/app/search_results.html
@@ -42,7 +42,9 @@
         <ul>
             {% for result in results %}
             <li>
-                <a href="{{ result.get_absolute_url }}">{{ result.title }}</a> - {{ result.description }}
+                <img src="{{ result.cover_image }}" alt="Book Cover" style="width: 100px; height: auto;">
+                <a href="{{ result.get_absolute_url }}">{{ result.title }}</a> 
+                {% comment %} - {{ result.description }} {% endcomment %}
                 <p>Tác giả: {{ result.author.name }}</p>
             </li>
             {% endfor %}
