--- a/sachnoi/static/assets/css/trending_page.css
+++ b/sachnoi/static/assets/css/trending_page.css
@@ -18,8 +18,8 @@
 }
 
 .book-list .book-item .image {
-    width: 100%;
-    height: 100%;
+    width: 177px;
+    height: 280px;
     object-fit: cover
 }
 
@@ -91,18 +91,19 @@
 .book-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px; /* Khoảng cách giữa các sách */
-    justify-content: flex-start;
-    margin-top: 20px;
+    gap: 20px;
+    justify-content: space-between;
 }
 
 .book-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 18%; /* Hiển thị 5-6 quyển mỗi hàng tùy thuộc màn hình */
     text-align: center;
-    width: 180px; /* Chiều rộng mỗi sách */
-    margin-bottom: 20px;
+}
+
+.book-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .image-container {
@@ -137,12 +138,12 @@
     gap: 5px;
 }
 
-.book-title {
+/* .book-title {
     margin-top: 10px;
     font-size: 16px;
     font-weight: bold;
     color: #333;
-}
+} */
 
 @media (max-width: 1028px) {
     .book-list .book-item {
