--- a/sachnoi/templates/app/account.html
+++ b/sachnoi/templates/app/account.html
@@ -13,21 +13,14 @@
 <body>
     <!-- header -->
     <header class="header">
-        {% comment %} <div class="search-container">
-            <input type="text" placeholder="Tìm kiếm" class="search-input">
-            <button class="search-button">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-        </div> {% endcomment %}
-
-        {% comment %} <div class="search-container">
+        <div class="search-container">
             <form method="GET" action="{% url 'search_results' %}" class="search-form">
                 <input type="text" name="q" placeholder="Tìm kiếm" class="search-input" required>
                 <button type="submit" class="search-button">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </form>
-        </div> {% endcomment %}
+        </div>
         
 
         <div class="header-content">
