--- a/sachnoi/templates/app/search_results.html
+++ b/sachnoi/templates/app/search_results.html
@@ -11,6 +11,14 @@
 </head>
 <body>
     <header class="header">
+        <div class="search-container">
+            <form method="GET" action="{% url 'search_results' %}" class="search-form">
+                <input type="text" name="q" placeholder="Tìm kiếm" class="search-input" required>
+                <button type="submit" class="search-button">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+            </form>
+        </div>
         
         <div class="header-content">
             <ul>
@@ -33,10 +41,13 @@
     {% if results %}
         <ul>
             {% for result in results %}
-                <li>
-                    <a href="{{ result.get_absolute_url }}">{{ result.title }}</a> - {{ result.description }}
-                    <p>Tác giả: {{ result.author.name }}</p>
-                </li>
+            <li>
+                <a href="{{ result.get_absolute_url }}">
+                    <img src="{{ result.cover_image }}" alt="Book Cover" style="width: 100px; height: auto;">{{ result.title }}
+                 </a> 
+                {% comment %} - {{ result.description }} {% endcomment %}
+                <p>Tác giả: {{ result.author.name }}</p>
+            </li>
             {% endfor %}
         </ul>
     {% else %}
