update : thinh hanh tren navbar

--- a/sachnoi/templates/app/discover.html
+++ b/sachnoi/templates/app/discover.html
@@ -28,6 +28,8 @@
         <div class="header-content">
             <ul>
                 <li><a href="{% url 'index' %}">Trang chủ</a></li>
+                <li ><a href="{% url 'trending_page' %}">Thịnh hành</a></li>
+                
                 <li class="title-page"><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>  
