--- a/sachnoi/templates/app/author_detail.html
+++ b/sachnoi/templates/app/author_detail.html
@@ -32,6 +32,8 @@
         <div class="header-content">
             <ul>    
                 <li><a href="{% url 'index' %}">Trang chủ</a></li>
+                <li ><a href="{% url 'trending_page' %}">Thịnh hành</a></li>
+
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>  
