--- a/sachnoi/templates/app/detail.html
+++ b/sachnoi/templates/app/detail.html
@@ -159,6 +159,8 @@
             <i class="fa-solid fa-bars" id="bar-icon"></i>
             <ul class="dropdown-menu-bar" id="dropdown-menu-bar">
                 <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
+                <li ><a href="{% url 'trending_page' %}">Thịnh hành</a></li>
+
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
