--- a/sachnoi/templates/app/search_results.html
+++ b/sachnoi/templates/app/search_results.html
@@ -24,6 +24,8 @@
             <ul>
                 
                 <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
+                <li ><a href="{% url 'trending_page' %}">Thịnh hành</a></li>
+
                 <li><a href="{% url 'discover' %}">Khám phá</a></li>
                 <li><a href="{% url 'author' %}">Tác giả</a></li>
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
