--- a/sachnoi/static/assets/css/trending_page.css
+++ b/sachnoi/static/assets/css/trending_page.css
@@ -7,20 +7,48 @@
     display: flex;
 }
 
+.book-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .book-list .book-item {
     width: calc(100% / 5 - 60px);
     aspect-ratio: 2 / 3;
     border-radius: 10px;
-    overflow: hidden;
     display: flex;
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 50px;
 }
-
-.book-list .book-item .image {
+.image-container {
     width: 100%;
     height: 100%;
-    object-fit: cover
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-container img:hover {
+    transform: scale(1.05); /* Hiệu ứng phóng to khi di chuột */
+}
+.views-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .book-item {
@@ -77,57 +105,11 @@
     font-weight: 500;
 }
 
-/* .author-item {
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
-} */
-
 .author-item:hover {
     transform: translateY(-5px); /* Nổi lên nhẹ */
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Đổ bóng */
 }
 
-/* .book-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px; 
-    justify-content: flex-start;
-    margin-top: 20px;
-    gap: 20px;
-    justify-content: space-between;
-} 
-*/ 
-.image-container {
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease;
-}
-
-.image-container img:hover {
-    transform: scale(1.05); /* Hiệu ứng phóng to khi di chuột */
-}
-.views-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
 @media (max-width: 1028px) {
     .book-list .book-item {
         width: calc(100% / 5 - 30px);
